# ninelives

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  2025-11-27-heya-claude-have-a-read-through-this-here-repo-g.txt  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXTENSIBLE_COMMANDS_EXAMPLE.md  README.md  ROADMAP-v0.3.0.md  ROADMAP.md  SECURITY.md  TODO-0.3.0.md  TODO.md  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-push
.github/workflows/: ci.yml  integration-tests.yml  release-plz.yml  roadmap.yml
.obsidian/: workspace.json
benches/: circuit_breaker.rs
docs/: ADR-001-ecosystem.md  ADR-002-auth.md  ADR-003-config.md  ADR-004-transport-formats.md  ADR-005-authz-audit-ordering.md  ADR-008-wire-format.md  ADR-009-rate-limiting.md  ADR-010-request-coalescing.md  ADR-011-deadline-propagation.md  ADR-012-config-persistence.md  ARCHITECTURE.md  ENFORCEMENT.md  GATOS.md  GUIDE_CUSTOM_POLICIES.md  IDEAS.md  OPERATIONS.md  PERFORMANCE_AND_MEMORY.md  SCHEMA_VALIDATION.md  SPEC.md  TEST_PLAN_BOOST.md  control-plane.md  custom-policy-layer.md
docs/ROADMAP/: ANALYSIS.md  DAG.csv  P1.md  P10.md  P2.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8.md  P9.md  README.md  WORKFLOW.md  roadmap.mmd
docs/ROADMAP/P0/: P0.01.a.md  P0.01.b.md  P0.01.md  P0.02.a.md  P0.02.b.md  P0.02.md  P0.03.a.md  P0.03.b.md  P0.03.md  P0.04.a.md  P0.04.b.md  P0.04.md  P0.05.a.md  P0.05.b.md  P0.05.md  P0.06.a.md  P0.06.b.md  P0.06.md  P0.07.a.md  P0.07.b.md  P0.07.md  P0.08.a.md  P0.08.b.md  P0.08.md  P0.09.md  P0.10.md  P0.11.a.md  P0.11.b.md  P0.11.md  P0.12.a.md  P0.12.b.md  P0.12.md  P0.13.a.md  P0.13.b.md  P0.13.md  P0.14.a.md  P0.14.b.md  P0.14.md  P0.15.a.md  P0.15.b.md  (+25 more)
docs/ROADMAP/P1/: P1.01.a.md  P1.01.b.md  P1.01.md  P1.02.a.md  P1.02.b.md  P1.02.md  P1.03.a.md  P1.03.b.md  P1.03.md  P1.04.a.md  P1.04.b.md  P1.04.md  P1.05.a.md  P1.05.b.md  P1.05.md  P1.06.a.md  P1.06.b.md  P1.06.md  P1.07.a.md  P1.07.b.md  P1.07.md  P1.08.a.md  P1.08.b.md  P1.08.md  P1.09.md  P1.10.a.md  P1.10.b.md  P1.10.md  P1.11.a.md  P1.11.b.md  P1.11.md  P1.12.a.md  P1.12.b.md  P1.12.md  README.md
docs/ROADMAP/P10/: P10.01.a.md  P10.01.b.md  P10.01.md  P10.01a.md  P10.01b.md  P10.01c.md  P10.01d.md  P10.02.a.md  P10.02.b.md  P10.02.md  P10.02a.md  P10.02b.md  P10.02c.md  P10.02d.md  P10.03.a.md  P10.03.b.md  P10.03.md  P10.03a.md  P10.03b.md  P10.03c.md  P10.03d.md  P10.03e.md  P10.04.a.md  P10.04.b.md  P10.04.md  P10.04a.md  P10.04b.md  P10.04c.md  P10.04d.md  P10.05.a.md  P10.05.b.md  P10.05.md  P10.06.a.md  P10.06.b.md  P10.06.md  P10.07.a.md  P10.07.b.md  P10.07.md  P10.08.a.md  P10.08.b.md  (+20 more)
docs/ROADMAP/P2/: DAG.csv  P2.01.a.md  P2.01.b.md  P2.01.md  P2.02.a.md  P2.02.b.md  P2.02.md  P2.03.a.md  P2.03.b.md  P2.03.md  P2.04.a.md  P2.04.b.md  P2.04.md  P2.05.a.md  P2.05.b.md  P2.05.md  P2.06.a.md  P2.06.b.md  P2.06.md  P2.07.a.md  P2.07.b.md  P2.07.md  P2.08.a.md  P2.08.b.md  P2.08.md  P2.09.a.md  P2.09.b.md  P2.09.md  P2.10.a.md  P2.10.b.md  P2.10.md  P2.11.a.md  P2.11.b.md  P2.11.md  P2.12.a.md  P2.12.b.md  P2.12.md  P2.121.md  P2.13.a.md  P2.13.b.md  (+20 more)
docs/ROADMAP/P3/: P3.01.a.md  P3.01.b.md  P3.01.md  P3.01a.md  P3.01b.md  P3.02.a.md  P3.02.b.md  P3.02.md  P3.02a.md  P3.02b.md  P3.03.a.md  P3.03.b.md  P3.03.md  P3.03a.md  P3.03b.md  P3.04.a.md  P3.04.b.md  P3.04.md  P3.04a.md  P3.04b.md  P3.05.a.md  P3.05.b.md  P3.05.md  P3.05a.md  P3.05b.md  (+19 more)
examples/: algebra_composition.rs  bulkhead_concurrency.rs  decorrelated_jitter.rs  full_stack.rs  retry_only.rs  telemetry_basic.rs  timeout_fallback.rs
ninelives-cookbook/: CHANGELOG.md  Cargo.toml  README.md
ninelives-cookbook/examples/: bulkhead_concurrency.rs  control_plane.rs  retry_only.rs  state_persistence.rs  telemetry_basic.rs  telemetry_composition.rs  timeout_algebraic_composition.rs  timeout_fallback.rs
ninelives-cookbook/src/: lib.rs
ninelives-elastic/: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
ninelives-elastic/src/: lib.rs
ninelives-elastic/tests/: integration.rs
ninelives-etcd/: Cargo.toml  README.md  docker-compose.yml
ninelives-etcd/src/: lib.rs
ninelives-etcd/tests/: integration.rs
ninelives-jsonl/: Cargo.toml  README.md
ninelives-jsonl/src/: lib.rs
ninelives-jsonl/tests/: integration.rs
ninelives-kafka/: Cargo.toml  README.md  docker-compose.yml
ninelives-kafka/src/: lib.rs
ninelives-kafka/tests/: integration.rs
ninelives-nats/: Cargo.toml  README.md  docker-compose.yml
ninelives-nats/src/: lib.rs
ninelives-nats/tests/: integration.rs
ninelives-otlp/: Cargo.toml  README.md  docker-compose.yml  otel-collector-config.yaml
ninelives-otlp/src/: lib.rs
ninelives-otlp/tests/: integration.rs
ninelives-prometheus/: Cargo.toml  README.md
ninelives-prometheus/src/: lib.rs
ninelives-prometheus/tests/: integration.rs
schemas/: command-result.schema.json  transport-envelope.schema.json
scripts/: bootstrap.sh  scaffold-test.sh  setup-hooks.sh
scripts/git-hooks/: pre-commit  pre-push
src/: adaptive.rs  algebra.rs  backoff.rs  bulkhead.rs  circuit_breaker.rs  circuit_breaker_registry.rs  clock.rs  control.rs  cookbook.rs  error.rs  jitter.rs  lib.rs  prelude.rs  presets.rs  rate_limit.rs  retry.rs  sleeper.rs  stack.rs  telemetry.rs  timeout.rs
src/control/: auth.rs  builtin_commands.rs  builtin_factory.rs  command.rs  handler.rs  router.rs  transport.rs  transport_channel.rs  types.rs
src/rate_limit/: middleware.rs  store.rs  strategies.rs
src/telemetry/: events.rs  mod.rs  sinks.rs
tests/: adaptive_bulkhead.rs  adaptive_retry.rs  audit_sink_capacity.rs  auth_layer.rs  auth_layer_compile.rs  command_context.rs  config_commands.rs  config_registry_poison.rs  prelude_compile.rs  presets.rs  rate_limit.rs  schema_command_result.rs  schema_transport_envelope.rs  stack_integration.rs  telemetry_overhead.rs  transport_channel.rs  transport_envelope.rs  transport_router.rs
tests/common/: test_helpers.rs
xtask/: Cargo.toml
xtask/src/: main.rs  plans.rs
(+269 files in other folders)
