[package]
name = "ninelives"
version = "0.1.0"
edition = "2021"
authors = ["James Ross <james@flyingrobots.dev>"]
license = "Apache-2.0"
description = "Resilience primitives for async Rust: retry, circuit breaker, bulkhead, timeout, and composable stacks."
repository = "https://github.com/flyingrobots/ninelives"
readme = "README.md"
keywords = ["resilience", "retry", "circuit-breaker", "bulkhead", "timeout"]
categories = ["asynchronous", "network-programming"]
rust-version = "1.70"

[workspace]
members = [
    "ninelives-nats",
    "ninelives-kafka",
    "ninelives-elastic",
    "ninelives-etcd",
    "ninelives-prometheus",
    "ninelives-jsonl",
    "ninelives-otlp",
    "ninelives-cookbook",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/ninelives"
readme = "README.md"
authors = ["James Ross <james@flyingrobots.dev>"]

[workspace.dependencies]
ninelives = { path = ".", version = "0.1.0" }
tokio = { version = "~1.48.0", features = ["time", "sync", "macros"] }
tower = { version = "0.5.2", features = ["full"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "~0.1.40"
rand = "~0.9.0"
async-trait = "~0.1.86"
futures = "~0.3.31"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "~0.3.20"
hdrhistogram = { version = "7", default-features = false }

[dependencies]
tokio = { workspace = true, features = ["time", "sync", "macros"] }
tracing.workspace = true
rand.workspace = true
async-trait.workspace = true
tower-service.workspace = true
tower-layer.workspace = true
futures.workspace = true
tower.workspace = true
thiserror.workspace = true
arc-swap = { version = "1", optional = true }
serde.workspace = true
serde_json.workspace = true
jsonschema = "0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
futures.workspace = true
hdrhistogram.workspace = true

[features]
bench-telemetry = []
adaptive-rwlock = []
default = ["arc-swap"]
