[package]
name = "ninelives-cookbook"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Examples and ready-made policy recipes for the ninelives resilience library"
license.workspace = true
publish = true
repository.workspace = true
readme.workspace = true

[dependencies]
ninelives = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
