[package]
name = "ninelives-elastic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional Elasticsearch telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
tower-service = { workspace = true }

# Optional heavy client
elasticsearch = { version = "8.16.0-alpha.1", optional = true }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[features]
client = ["elasticsearch", "reqwest", "tokio"]
