[package]
name = "ninelives-elastic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Elasticsearch telemetry sink for ninelives (bring-your-own client)"
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
tower-service = { workspace = true }
serde_json.workspace = true
elasticsearch = { version = "8.19.0-alpha.1", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[features]
default = []
