[package]
name = "ninelives-elastic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Elasticsearch telemetry sink for ninelives (bring-your-own client)"
license.workspace = true
publish = false
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true, features = ["telemetry-json"] }
tracing.workspace = true
tower-service = { workspace = true }
serde_json.workspace = true
elasticsearch = { version = "8.19.0-alpha.1", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
uuid.workspace = true

[features]
default = []
