[package]
name = "ninelives-etcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional etcd telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

etcd-client = { version = "0.11", features = ["tls"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[features]
client = ["etcd-client", "tokio", "chrono"]
