[package]
name = "ninelives-etcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "etcd telemetry sink for ninelives (bring-your-own client)"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tower-service = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
etcd-client = { version = "0.11", features = ["tls"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
