[package]
name = "ninelives-jsonl"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "JSONL telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
serde_json = { version = "1" }
tokio = { version = "1", features = ["fs", "macros"] }
tower-service = { workspace = true }

[features]
default = []
