[package]
name = "ninelives-jsonl"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "JSONL telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }
tower-service = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
