[package]
name = "ninelives-kafka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional Kafka telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
serde_json.workspace = true
tracing = "0.1"
rdkafka = { version = "0.38", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }
tower-service = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
