[package]
name = "ninelives-kafka"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional Kafka telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
rdkafka = { version = "0.38", features = ["tokio"] }
tokio = { workspace = true, features = ["rt", "macros"] }
tower-service = { workspace = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
