[package]
name = "ninelives-nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Optional NATS telemetry sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
serde_json.workspace = true
tower-service = { workspace = true }
nats = "0.25"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
