[package]
name = "ninelives-nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "NATS telemetry sink for ninelives (bring-your-own client)"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
serde_json.workspace = true
tower-service = { workspace = true }
async-nats = "0.45"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
