[package]
name = "ninelives-otlp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OTLP telemetry sink for ninelives (bring-your-own Logger)"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
tower-service = { workspace = true }
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry_sdk = { version = "0.31", features = ["logs", "testing", "rt-tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
