[package]
name = "ninelives-otlp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OTLP telemetry sink for ninelives (bring-your-own Logger)"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing.workspace = true
tower-service = { workspace = true }
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["logs", "rt-tokio"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
opentelemetry-otlp = { version = "0.31", features = ["logs", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31", features = ["testing"] }

[features]
default = []
