[package]
name = "ninelives-prometheus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "In-process Prometheus metrics sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing = "0.1"
prometheus = { version = "0.13", optional = true }

[features]
client = ["prometheus"]
