[package]
name = "ninelives-prometheus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "In-process Prometheus metrics sink for ninelives"
license.workspace = true
publish = true
repository.workspace = true
readme = "README.md"

[dependencies]
ninelives = { workspace = true }
tracing.workspace = true
prometheus = { version = "0.14" }
tower-service = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
